--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "typescript": "~3.7.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "emarket/node_modules/.bin/react-scripts start",
+    "build": "emarket/node_modules/.bin/react-scripts build",
+    "test": "emarket/node_modules/.bin/react-scripts test",
+    "eject": "emarket/node_modules/.bin/react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
