--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "antd": "^4.1.4",
+    "axios": "^0.19.2",
+    "axios-auth-refresh": "^2.2.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
